docs: update demo site

--- a/dev/index.html
+++ b/dev/index.html
@@ -13,7 +13,26 @@
 
     <h1 data-title>Webpack Library Boilerplate</h1>
     <p data-description></p>
-
+    <div>
+        <a href="https://www.npmjs.com/package/@phucbm/cursorjs"><img
+                src="https://badgen.net/npm/v/%40phucbm%2Fcursorjs?cache=600"></a>
+        <a href="https://www.npmjs.com/package/@phucbm/cursorjs"><img
+                src="https://badgen.net/npm/dt/%40phucbm%2Fcursorjs?cache=600"></a>
+        <a href="https://webuild.community"><img
+                src="https://raw.githubusercontent.com/webuild-community/badge/master/svg/made.svg"></a>
+        <a href="https://www.jsdelivr.com/package/gh/phucbm/cursorjs"><img
+                src="https://data.jsdelivr.com/v1/package/gh/phucbm/cursorjs/badge?style=rounded"></a>
+        <a href="https://github.com/phucbm/cursorjs/blob/main/LICENSE"><img
+                src="https://badgen.net/github/license/phucbm/cursorjs/"></a>
+        <a href="https://app.netlify.com/sites/cursorjs/deploys"><img
+                src="https://api.netlify.com/api/v1/badges/9d9b7120-8c9d-486d-b53e-7fa938ce5c78/deploy-status"></a>
+    </div>
+    <br>
+    <div class="btn-group">
+        <a href="https://github.com/phucbm/cursorjs" class="btn" style="text-decoration:none">👀 GitHub</a>
+        <a href="https://github.com/phucbm/cursorjs#docs" class="btn green" style="text-decoration:none">📘 Docs</a>
+    </div>
+    <br>
     <section>
         <h2 class="heading-separator"><span>Default style</span></h2>
         <div class="cursorjs-box" id="default-cursor">hover me</div>
@@ -48,7 +67,7 @@
 
         <p>Wonder how this page was made? You can find the source code <a
                 href="https://github.com/phucbm/cursorjs/tree/main/dev">here</a>.</p>
-
+        <p></p>
     </section>
 
 </div>
@@ -65,7 +84,8 @@
             </svg>
         </a>
     </div>
-    <p><a href="https://github.com/phucbm">@phucbm</a></p>
+    <p>Made with 🧡 by <a href="https://github.com/phucbm">@phucbm</a></p>
+    <p>Would you give me a <a href="https://github.com/phucbm/cursorjs">star</a>? 🤗</p>
     <br>
     <br>
 </div>
